# DataStrcut_labyrinthos

./: CMakeLists.txt  Matrix_lab.cpp  Matrix_lab.h
Source/UI/: mainwindows.ui
Source/inc/: Matrix_lab.h  mainwindows.h
Source/src/: Matrix_lab.cpp  main.cpp  mainwindows.cpp
data/: mazeOutofRange.in  maze_errUNwhole.in  maze_loop.in  maze_multiplePath.in
